--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,21 +13,14 @@
         android:theme="@style/Theme.PlacesTask"
         tools:targetApi="31">
         <activity
-            android:name=".PhilaeActivity"
+            android:name=".EsterahaActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".SimbelActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".AmbeleActivity"
+            android:name=".FacultyEngActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
